cambios que agregamos de celebracion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Este es mi sitio web de prueba para el curso de prework de platzi
+        Este es mi sitio web de prueba para el curso de prework de platzi. Funcionó de maravilla.
     </p>
 </body>
 </html>
